# ocpy

./: .gitignore  .readthedocs.yaml  CLAUDE.md  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: tests.yml
docs/: HOWTO_pypi.md  Makefile  changelog.rst  conf.py  contributing.rst  index.rst  installation.rst  panagea.rst  pangaea.rst  quickstart.rst  requirements.txt  spectra.rst
docs/_static/: custom.css
docs/api/: chl.rst  hydrolight.rst  hypera.rst  insitu.rst  iop.rst  ls2.rst  pace.rst  ph.rst  satellites.rst  spectra.rst  tara.rst  utils.rst  water.rst
docs/user_guide/: chlorophyll.rst  hydrolight.rst  hypera.rst  iop_inversions.rst  phytoplankton.rst  satellites.rst  tara_data.rst  visualization.rst  water_optics.rst
examples/: pace_correlated_error_example.py
figures/py/: figs_ocpy.py
nb/: TaraFussin.ipynb
nb/Dye/: Fussing.ipynb  PCA.ipynb
nb/Ed/: Ed_z.ipynb
nb/GLORIA/: GLORIA_IO.ipynb  GLORIA_OOD.ipynb  GLORIA_UMAP_OOD.ipynb  GLORIA_spectra.ipynb
nb/IHOP/: BenchmarkEmulator.ipynb  Debuggin_PCA_Tara+L23.ipynb  Gordon.ipynb  Kd.ipynb  MCMC_Fussing.ipynb  NMF_Test.ipynb  PCA_Rs.ipynb  Tara_for_IHOP.ipynb
nb/Kd/: Ed_z.ipynb  Kd_PAR.ipynb
nb/PACE/: PACE_OOD_PCA.ipynb  PACE_OOD_UMAP.ipynb  PACE_initial.ipynb
nb/PANAGEA/: 10_coverage.ipynb  11_chlorophyll.ipynb  12_rrs_spectra.ipynb  13_iops.ipynb  20_hyperspectral_extract.ipynb  PANAGEA_demo.ipynb
nb/Polarization/: Koestner.ipynb  Koestner2020.ipynb  Koestner2021.ipynb
nb/Remote/: MCMC_Fussing.ipynb
nb/Satellites/: MODIS_noise.ipynb  PACE_noise.ipynb  SeaWiFS_noise.ipynb
nb/Spectra/: Spectra_demo.ipynb
nb/Stramski/: Abs_Scatt.ipynb  BSplineL23_a.ipynb  Convert_LS2_LUT.ipynb  ExploreL23.ipynb  ExploreL23_a.ipynb  ExploreL23_b.ipynb  ExploreL23_bb.ipynb  Stramski2001.ipynb
nb/Tara/: ExamineSequencer.ipynb  ExploreTara.ipynb  TaraFun.ipynb  TaraFussin.ipynb  TaraPCA.ipynb  TaraRebin.ipynb  TaraSeqUnNorm.ipynb  TaraSequencer.ipynb  TaraUMAP.ipynb  Tara_PG.ipynb
oceancolor/: cross.py  pca.py  water.py
oceancolor/dye/: io.py
oceancolor/hydrolight/: L23_water.ipynb  loisel23.py
oceancolor/ihop/: bspline.py  figures.py  io.py  mcmc.py  model.pt  nn.py  nn_arch_search.py  pca.py
oceancolor/iop/: cdom.py  cross.py  io.py
oceancolor/ls2/: io.py  kd_nn.py  ls2_main.py
oceancolor/pace/: io.py
oceancolor/ph/: absorption.py  io.py  load_data.py  pigments.py
oceancolor/polarize/: load_data.py
oceancolor/remote/: figures.py  io.py  mcmc.py  nn.py  pca.py
oceancolor/satellites/: modis.py  pace.py  seawifs.py
oceancolor/tara/: analysis.py  explore.py  ingest.py  io.py  spectra.py  utils.py
oceancolor/tests/: test_ls2.py  test_ls2_kd.py  test_ph.py  test_polarize.py  test_tara.py
oceancolor/utils/: pca.py  spectra.py
oceancolor/water/: absorption.py  io.py  scattering.py
ocpy/: __init__.py
ocpy/aop/: kd.py
ocpy/chl/: band_ratios.py
ocpy/hydrolight/: loisel23.py
ocpy/hyper_a/: __init__.py  io.py  lib.py  process.py
ocpy/insitu/: gloria.py  panagea.py  pangaea.py
ocpy/iop/: cdom.py  zlee.py
ocpy/ls2/: io.py  kd_nn.py  ls2_main.py
ocpy/nobm/: io.py
ocpy/nomb/: io.py
ocpy/pace/: CORRELATED_ERROR_QUICKSTART.md  README.md  correlated_error.py  io.py
ocpy/ph/: absorption.py  load_data.py  pigments.py
ocpy/polarize/: load_data.py
ocpy/satellites/: modis.py  pace.py  sbg.py  seawifs.py  utils.py
ocpy/scripts/: plot_oc_scene.py  plot_rrs.py
ocpy/spectra/: __init__.py  core.py  io.py  utils.py
ocpy/tara/: README.md  analysis.py  explore.py  ingest.py  io.py  measures.py  spectra.py
ocpy/tests/: test_coords.py  test_correlated_error.py  test_ls2.py  test_ls2_kd.py  test_panagea.py  test_pangaea.py  test_ph.py  test_plot_oc_scene.py  test_polarize.py  test_scripts.py  test_tara.py  (+2 more)
prompts/: GUIs.md  package_data_fix.md  panagea.md  pip.md  spectra.md
(+71 files in other folders)
